--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ main {
 }
 
 .card {
-	max-width: 327px;
+	width: 327px;
 	padding: 24px;
 	border-radius: 12px;
 	background-color: var(--color-2);
@@ -69,3 +69,37 @@ main {
 	font-weight: var(--fw-3);
 	line-height: 1.5;
 }
+
+.card-text {
+	margin: 24px 0;
+	text-align: center;
+	color: var(--color-4);
+	font-size: var(--fs-1);
+	font-weight: var(--fw-1);
+	line-height: 1.5;
+}
+
+.card-link {
+	display: block;
+	margin-top: 16px;
+	padding: 12px 0;
+	border-radius: 8px;
+	text-decoration: none;
+	text-align: center;
+	color: var(--color-4);
+	font-size: var(--fs-1);
+	font-weight: var(--fw-3);
+	line-height: 1.5;
+	background-color: var(--color-3);
+}
+
+/* :root {
+	--fw-1: 400;
+	--fw-2: 600;
+	--fw-3: 700;
+} */
+
+/* .card-link:hover {
+	color: var(--color-3);
+	background-color: var(--color-5);
+} */
