--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,9 @@
 
 	--fs-1: 14px;
 	--fs-2: 24px;
-
-	/* Responsive --> 768px */
 }
+
+/* || MAIN SECTION */
 
 main {
 	display: flex;
@@ -60,7 +60,7 @@ main {
 	color: var(--color-4);
 	font-size: var(--fs-2);
 	font-weight: var(--fw-2);
-	line-height: 1.5;
+	line-height: 2;
 }
 
 .card-title p {
@@ -93,13 +93,16 @@ main {
 	background-color: var(--color-3);
 }
 
-/* :root {
-	--fw-1: 400;
-	--fw-2: 600;
-	--fw-3: 700;
-} */
+/* || MEDIA QUERIES */
 
-/* .card-link:hover {
-	color: var(--color-3);
-	background-color: var(--color-5);
-} */
+@media only screen and (min-width: 1024px) {
+	.card {
+		width: 384px;
+		padding: 40px;
+	}
+
+	.card-link:hover {
+		color: var(--color-3);
+		background-color: var(--color-5);
+	}
+}
